services/user-service/k8s/deployments/k8s/services/monitoring/prometheus/cost-optimization/scripts/cost-optimization/security/k8s/hpa/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops-ingress
spec:
  rules:
  - host: devsecops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
